<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Send it later</string>
    <string name="please_wait">Please wait</string>
    <string name="pending_messages">Pending messages</string>
    <string name="next">Next</string>
    <string name="sent">Sent</string>
    <string name="Date">Date:</string>
    
    <string name="Ok">Ok</string>
    <string name="Cancel">Cancel</string>
    <string name="Hour">Hour</string>
    <string name="Minute">Minute</string>
    <string name="To">To:</string>
    <string name="Time">Time:</string>
    <string name="Done">Done</string>
    <string name="Never">Never</string>
    <string name="Frequency">Frequency: </string>
    <string name="Alert_on_delivery">Alert on delivery:</string>
    <string name="Characters">Characters</string>
    <string name="Message">Message</string>
    <string name="Choose_Frequency">Choose Frequency</string>
    <string name="Add">Add</string>
    <string name="Save">Save</string>
    <string name="Rate_Application">Rate app on market</string>
    <string name="Invalid_message_warning">Invalid SMS: Please fill in the contacts/message</string>
    <string name="message_removed_success">Message removed successfully</string>
    <string name="remove_item">Remove message</string>
    <string name="confirm_delete_item">Do you want to delete this message ?</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="Delete">Delete</string>
    <string name="message_removed_failed">Message removed failed</string>
    <string name="successful_sent_notification_title">Message sent successful</string>
    <string name="failed_sent_notification_title">Failed to send message</string>
    <string name="Please_enter_a_phone_number">Please enter a phone number</string>
    <string name="Preferences">Preferences</string>
    <string name="Exit">Exit</string>
    <string name="Sent_to">Sent:</string>
    <string name="PREF_MAX_SENT_ITEM">PREF_MAX_SENT_ITEM</string>
    <string name="Max_sent_item">Auto clean sent messages</string>
    <string name="Max_sent_item_summary">Keep only latest messages</string>
    <string name="Max_sent_item_dialog_title">Keep latest</string>
    
    
    <string name="about_us">About us</string>
    <string name="sil_version">Send it later, version </string>
    <string name="feel_free">Free codes at:</string>
    <string name="or_send_email">Email: &lt;a href=&quot;mailto:sphamhung@yahoo.com&quot;&gt;sphamhung@yahoo.com&lt;/a&gt;</string>
    <string name="Close">Close</string>
    <string name="Sent_failed">Failed to send to: </string>
    <string name="Sent_failed_short">Failed: </string>
    <string name="google_code">&lt;a href=&quot;https://sms-trial.googlecode.com/svn/&quot;&gt; Google Code &lt;/a&gt;</string>
    <string name="Rate_App">Rate application</string>
    <string name="Rate">Rate</string>
    <string name="https_sms_trial_googlecode_com_svn_">https://sms-trial.googlecode.com/svn/</string>
    <string name="Please_support_us">Please support us by rating this app on the Android Market. Thank you!</string>
    <string name="Remove">Remove</string>
    <string name="Resend_now">Resend now</string>
    <string name="Edit">Edit</string>
    <string name="Message_is_sent_sucessfully">Message is sent successfully</string>
    <string name="Message_resend_later">Sent failed, please try again later</string>
    <string name="Sending_please_wait">Message is being sent, please wait …</string>
    <string name="Today_at">Today, at</string>
    <string name="Tomorrow_at">Tomorrow, at</string>
    <string name="Yesterday_at">Yesterday, at</string>
    <string name="First_time_running">First time running</string>
    <string name="please_wait_while_loading_contact">Loading contacts…</string>
    <string name="vn_special_characters">àáảãạäèéẻẽẹêềếểễệìíỉĩịòóỏõọôồốổỗộơờớởỡợöùúủũụưừứửữựüỳýỷỹỵăằắẳẵặâầấẩẫậđ</string>
    <string name="Enter_message_here">Enter message here…</string>
    <string name="more_apps">More apps…</string>
    <string name="Share">Share</string>
    <string name="Contact">Contact</string>
    <string name="Share_subject">Share</string>
    <string name="Share_content">Nice SMS scheduler app: https://play.google.com/store/apps/details?id=dtd.phs.sil</string>
    <string name="Call_now">Call now</string>
    <string name="sms_now">Sms now</string>
    <string name="Invalid_time_warning">Invalid time, please select a later date/time</string>
    <string name="Insert">Insert</string>
</resources>