<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:minWidth="300dp"
  android:background="@drawable/dialog_bg">
	  <TextView
	  	android:layout_width="fill_parent"
	  	android:layout_height="44dp"
	  	android:background="@drawable/dialog_title_bg"
	  	android:text="@string/about_us"
	  	android:textColor="#ffffff"
	  	android:textSize="16sp"
	  	android:gravity="center"
	  	android:paddingTop="5dp"
	  	android:paddingBottom="5dp"
	  />    
	  <ImageView
	  	android:layout_width="fill_parent" 
	  	android:layout_height="180dp"
	  	android:src="@drawable/dtd_logo"
	  	android:gravity="center_horizontal"
	  	android:scaleType="fitCenter"
	  	android:paddingTop="5dp"
	  	android:paddingBottom="5dp"
	  />
	  <LinearLayout
	  	android:layout_width="fill_parent" 
	  	android:layout_height="wrap_content"
	  	android:orientation="vertical"
	  	android:padding="5dp"
	  	android:paddingBottom="15dp"
	  >
		  <TextView
		  	android:id="@+id/tvAppVersion"
		  	android:layout_width="fill_parent"
		  	android:layout_height="wrap_content"
		  	android:gravity="center_horizontal"
		  	android:text = "@string/sil_version"
		  	android:textColor="@color/dialog_text_color"
		  ></TextView>
		  <LinearLayout
		  	android:layout_width="fill_parent" 
		  	android:layout_height="wrap_content"
		  	android:orientation="horizontal"
		  >
			  <TextView
			  	android:layout_width="wrap_content"
			  	android:layout_height="wrap_content"
			  	android:gravity="left"
			  	android:text="@string/feel_free"
			  	android:textColor="@color/dialog_text_color"	   
			  />
			  <TextView
			   	android:id="@+id/tvCodeHome"
			  	android:layout_width="fill_parent"
			  	android:layout_height="wrap_content"
			  	android:gravity="left"
			  	android:text="https://sms-trial.googlecode.com/svn/t"
			  	android:textColor="@color/dialog_text_color"
			  	android:paddingLeft="5dp"	   
			  />
		  </LinearLayout>
		  <TextView
		   	android:id="@+id/tvEmail"
		  	android:layout_width="fill_parent"
		  	android:layout_height="wrap_content"
		  	android:gravity="left"
		  	android:text="@string/or_send_email"
		  	android:textColor="@color/dialog_text_color"		  	   
		  />
	  
	  </LinearLayout>
	  <LinearLayout
	  	android:layout_width="fill_parent" 
	  	android:background="@drawable/dialog_bottom_bg"
	  	android:orientation="vertical"
	  	android:paddingTop="5dp"
	  	android:paddingBottom="5dp"
	  	android:layout_height="52dp"
	  >	 
	  	<Button
	  		android:id="@+id/btClose"
	  		android:layout_width="wrap_content" 
	  		android:layout_height="wrap_content"
	  		android:text="@string/Close"
	  		android:layout_gravity="center"
	  		android:paddingLeft="50dp"
	  		android:paddingRight="50dp"
	  		style="@style/button_style"
	  	/>
	  </LinearLayout>	  
</LinearLayout>
