<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_bg"
    android:minWidth="300dp"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="44dp"
        android:background="@drawable/dialog_title_bg"
        android:gravity="center"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:text="@string/Rate_App"
        android:textColor="#ffffff"
        android:textSize="16sp" />

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="120dp"
        android:gravity="center_horizontal"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_launcher" />
	<TextView
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:textColor="@color/dialog_text_color"
	    android:paddingTop="16dp"
	    android:paddingLeft="12dp"
	    android:paddingRight="12dp"
	    android:paddingBottom="16dp"
	    android:textSize="16sp"
	    android:text="@string/Please_support_us"
	/>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="52dp"
        android:background="@drawable/dialog_bottom_bg"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:paddingLeft="8dp" 
        android:paddingRight="8dp" 
	>

        <Button
            android:id="@+id/btRate"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:text="@string/Rate" />

        <Button
            android:id="@+id/btClose"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:text="@string/Close" />
    </LinearLayout>

</LinearLayout>