<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" 
>
    <!--
    <TextView
        android:id="@+id/tvSelectedTime"
        android:layout_width="fill_parent"
        android:layout_height="36dp"
        android:background="@drawable/date_dialog_title_bg"
        android:gravity="center_vertical"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="Selected: 00:00"
        android:textColor="#ffffffff"
        android:textSize="16sp"
 
    />
    -->
    <LinearLayout
        android:orientation="horizontal" 
        android:layout_width="fill_parent"
        android:layout_height="36dp"
        android:gravity="center"
        android:background="@drawable/date_dialog_title_bg"
        >
       	<TextView
       	    android:layout_width="1dp"
       	    android:layout_height="wrap_content"
       	    android:layout_weight="1"
       	    android:text="@string/Hour"
       	    android:gravity="center"
       	    android:textColor="#ffffffff"
       	    />
       	<TextView
       	    android:layout_width="1dp"
       	    android:layout_height="wrap_content"
       	    android:layout_weight="1"
       	    android:text="@string/Minute"
       	    android:gravity="center"
       	    android:textColor="#ffffffff"
       	    />
       	</LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#00112233"
        android:paddingBottom="1dp"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:paddingTop="1dp" >

        <kankan.wheel.widget.WheelView
            android:id="@+id/hourWheel"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <kankan.wheel.widget.WheelView
            android:id="@+id/minuteWheel"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="54dp"
        android:background="@drawable/date_dialog_title_bg"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="5dp" >

        <Button
            android:id="@+id/btOk"
            style="@style/button_style"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:text="@string/Ok"
            android:typeface="sans" />

        <Button
            android:id="@+id/btCancel"
            style="@style/button_style"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:text="@string/Cancel" />
    </LinearLayout>

</LinearLayout>